# Spell-Check

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  sample_text.txt  spellchecker.conf
dictionaries/: en_US.dict
include/: dictionary.h  spell_checker.h  suggestion_engine.h  text_processor.h
src/: dictionary.cpp  main.cpp  spell_checker.cpp  suggestion_engine.cpp  text_processor.cpp
